.github/workflows/build.yml: fix the ccache.key

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - id: cache-ccache
         uses: hendrikmuhs/ccache-action@v1
         with:
-          key: ${{ matrix.os }}-${{ matrix.type }}
+          key: linux
       - name: Install dependencies
         run: |
           sudo apt install -y --no-install-recommends \
@@ -96,7 +96,7 @@ jobs:
       - id: cache-ccache
         uses: hendrikmuhs/ccache-action@v1
         with:
-          key: ${{ matrix.os }}-${{ matrix.type }}
+          key: macos
 
       - uses: actions/setup-python@v1
 
