test/tag/TestMixRampParser: new unit test

--- a/test/tag/meson.build
+++ b/test/tag/meson.build
@@ -2,10 +2,12 @@ test(
   'TestMixRamp',
   executable(
     'TestMixRamp',
+    'TestMixRampParser.cxx',
     'TestMixRampInterpolate.cxx',
     include_directories: inc,
     dependencies: [
       log_dep,
+      tag_dep,
       util_dep,
       gtest_dep,
     ],
