--- a/src/tag/meson.build
+++ b/src/tag/meson.build
@@ -43,6 +43,7 @@ if libid3tag_dep.found()
   tag_sources += [
     'Id3Load.cxx',
     'Id3Scan.cxx',
+    'Id3MixRamp.cxx',
     'Id3ReplayGain.cxx',
     'Rva2.cxx',
     'RiffId3.cxx',
