fs/io: move to io/

--- a/src/io/meson.build
+++ b/src/io/meson.build
@@ -2,6 +2,11 @@ io = static_library(
   'io',
   'FileDescriptor.cxx',
   'Open.cxx',
+  'PeekReader.cxx',
+  'FileReader.cxx',
+  'BufferedReader.cxx',
+  'FileOutputStream.cxx',
+  'BufferedOutputStream.cxx',
   include_directories: inc,
 )
 
