--- a/src/pcm/meson.build
+++ b/src/pcm/meson.build
@@ -47,6 +47,7 @@ pcm_sources = [
   'FallbackResampler.cxx',
   'ConfiguredResampler.cxx',
   'AudioCompress/compress.c',
+  'ReplayGainAnalyzer.cxx',
 ]
 
 libsamplerate_dep = dependency('samplerate', version: '>= 0.1.3', required: get_option('libsamplerate'))
