ReplayGain{Config,Global}: move to config/

--- a/meson.build
+++ b/meson.build
@@ -281,6 +281,7 @@ sources = [
   'src/command/CommandListBuilder.cxx',
   'src/config/PartitionConfig.cxx',
   'src/config/PlayerConfig.cxx',
+  'src/config/ReplayGainConfig.cxx',
   'src/Idle.cxx',
   'src/IdleFlags.cxx',
   'src/decoder/Thread.cxx',
@@ -336,7 +337,6 @@ sources = [
   'src/queue/PlaylistEdit.cxx',
   'src/queue/PlaylistTag.cxx',
   'src/queue/PlaylistState.cxx',
-  'src/ReplayGainGlobal.cxx',
   'src/LocateUri.cxx',
   'src/SongUpdate.cxx',
   'src/SongLoader.cxx',
