--- a/doc/mpdconf.example
+++ b/doc/mpdconf.example
@@ -79,7 +79,7 @@
 # This setting sets the address for the daemon to listen on. Careful attention
 # should be paid if this is assigned to anything other than the default, any.
 # This setting can deny access to control of the daemon. Not effective if
-# systemd socket activiation is in use.
+# systemd socket activation is in use.
 #
 # For network
 #bind_to_address		"any"
@@ -185,7 +185,7 @@
 #       cache_directory "~/.local/share/mpd/cache"
 #}
 #
-# An example of database config for a sattelite setup
+# An example of database config for a satellite setup
 #
 #music_directory "nfs://fileserver.local/srv/mp3"
 #database {
