ReplayGainInfo: move to tag/

--- a/src/tag/meson.build
+++ b/src/tag/meson.build
@@ -27,7 +27,8 @@ tag_sources = [
   'Table.cxx',
   'Format.cxx',
   'VorbisComment.cxx',
-  'ReplayGain.cxx',
+  'ReplayGainInfo.cxx',
+  'ReplayGainParser.cxx',
   'MixRampParser.cxx',
   'Generic.cxx',
   'Id3MusicBrainz.cxx',
