pcm/MixRampAnalyzer: a MixRamp implementation

--- a/test/meson.build
+++ b/test/meson.build
@@ -567,6 +567,17 @@ executable(
   ],
 )
 
+executable(
+  'RunMixRampAnalyzer',
+  'RunMixRampAnalyzer.cxx',
+  'ReadFrames.cxx',
+  include_directories: inc,
+  dependencies: [
+    pcm_dep,
+    io_dep,
+  ],
+)
+
 #
 # Encoder
 #
