lib/curl/Request: move code from SetupEasy() to Setup.cxx

--- a/src/lib/curl/meson.build
+++ b/src/lib/curl/meson.build
@@ -18,6 +18,7 @@ curl = static_library(
   'Init.cxx',
   'Global.cxx',
   'Request.cxx',
+  'Setup.cxx',
   'Adapter.cxx',
   'Escape.cxx',
   'Form.cxx',
