queue/Queue{Save,Print}: remove redundant "Queue" prefix from file name

--- a/meson.build
+++ b/meson.build
@@ -330,8 +330,8 @@ sources = [
   'src/playlist/Print.cxx',
   'src/db/PlaylistVector.cxx',
   'src/queue/Queue.cxx',
-  'src/queue/QueuePrint.cxx',
-  'src/queue/QueueSave.cxx',
+  'src/queue/Print.cxx',
+  'src/queue/Save.cxx',
   'src/queue/Playlist.cxx',
   'src/queue/PlaylistControl.cxx',
   'src/queue/PlaylistEdit.cxx',
