db/VHelper: move CompareTags() to tag/Sort.cxx

--- a/src/tag/meson.build
+++ b/src/tag/meson.build
@@ -18,6 +18,7 @@ tag_sources = [
   'Builder.cxx',
   'Handler.cxx',
   'Settings.cxx',
+  'Sort.cxx',
   'Config.cxx',
   'ParseName.cxx',
   parse_name_cxx,
