add libnpupnp wrap
Allows compilation when libnpupnp is missing on host.

Signed-off-by: Rosen Penev <rosenp@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -15,6 +15,7 @@ project(
     'expat:default_library=static',
     'fmt:default_library=static',
     'gtest:default_library=static',
+    'libnpupnp:default_library=static',
     'sqlite3:default_library=static',
     'vorbis:default_library=static',
 
@@ -23,6 +24,7 @@ project(
     'expat:warning_level=0',
     'fmt:warning_level=0',
     'gtest:warning_level=0',
+    'libnpupnp:warning_level=0',
     'sqlite3:warning_level=0',
     'vorbis:warning_level=0',
   ],
