output/shout: declare minimum version 2.4.0
This version was released 7 years ago, and it's reasonable to require
at least this version.

--- a/src/output/plugins/meson.build
+++ b/src/output/plugins/meson.build
@@ -99,7 +99,7 @@ if get_option('recorder')
   need_encoder = true
 endif
 
-libshout_dep = dependency('shout', required: get_option('shout'))
+libshout_dep = dependency('shout', version: '>= 2.4.0', required: get_option('shout'))
 output_features.set('HAVE_SHOUT', libshout_dep.found())
 if libshout_dep.found()
   output_plugins_sources += 'ShoutOutputPlugin.cxx'
