meson.build: always enable Wave encoder for Snapcast
Even if the "wave_encoder" option is disabled (and no other encoder
plugins are enabled), forcefully enable the Wave encoder (if Snapcast
is enabled).

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1500

--- a/src/output/plugins/meson.build
+++ b/src/output/plugins/meson.build
@@ -10,6 +10,7 @@ output_plugins_deps = [
 ]
 
 need_encoder = false
+need_wave_encoder = false
 
 if alsa_dep.found()
   output_plugins_sources += 'AlsaOutputPlugin.cxx'
@@ -127,9 +128,7 @@ if get_option('snapcast')
 
   output_features.set('HAVE_YAJL', yajl_dep.found())
 
-  # TODO: the Snapcast plugin needs just the "wave" encoder, but this
-  # enables all available encoders
-  need_encoder = true
+  need_wave_encoder = true
 endif
 
 enable_solaris_output = get_option('solaris_output')
