--- a/meson_options.txt
+++ b/meson_options.txt
@@ -186,6 +186,8 @@ option('shout', type: 'feature', description: 'Shoutcast streaming support using
 option('snapcast', type: 'boolean', value: true, description: 'Snapcast output plugin')
 option('sndio', type: 'feature', description: 'sndio output plugin')
 option('solaris_output', type: 'feature', description: 'Solaris /dev/audio support')
+option('visualization', type: 'boolean', value: true, description: 'Visualization output plugin')
+option('fftw3', type: 'feature', description: 'FFTW support')
 
 #
 # Misc libraries
