test/fs: rename TestFs.cxx to TestGlob.cxx

--- a/test/fs/meson.build
+++ b/test/fs/meson.build
@@ -2,7 +2,7 @@ test(
   'TestFs',
   executable(
     'TestFs',
-    'TestFs.cxx',
+    'TestGlob.cxx',
     'TestLookupFile.cxx',
     include_directories: inc,
     dependencies: [
