test/fs/TestPath: new unit test

--- a/test/fs/meson.build
+++ b/test/fs/meson.build
@@ -4,6 +4,7 @@ test(
     'TestFs',
     'TestGlob.cxx',
     'TestLookupFile.cxx',
+    'TestPath.cxx',
     include_directories: inc,
     dependencies: [
       fs_dep,
