mixer/Mixer*: drop the "Mixer" prefix from source files

--- a/src/mixer/meson.build
+++ b/src/mixer/meson.build
@@ -4,9 +4,9 @@ subdir('plugins')
 
 mixer_glue = static_library(
   'mixer_glue',
-  'MixerControl.cxx',
-  'MixerType.cxx',
-  'MixerAll.cxx',
+  'Control.cxx',
+  'Type.cxx',
+  'All.cxx',
   include_directories: inc,
   dependencies: [
     log_dep,
