--- a/src/lib/sndio/meson.build
+++ b/src/lib/sndio/meson.build
@@ -1,12 +1,18 @@
-libsndio_dep = c_compiler.find_library('sndio', required: get_option('sndio'))
-if libsndio_dep.found()
-  if c_compiler.has_header_symbol('sndio.h', 'ROAR_VERSION')
-    if get_option('sndio').enabled()
-      error('Found libroarsndio, which is known to be broken.')
-    else
-      warning('Found libroarsndio, which is known to be broken; ignoring it.')
-      libsndio_dep = dependency('', required: false)
-    endif
-  endif
-endif
+libsndio_dep = dependency('sndio', required: get_option('sndio'))
 conf.set('ENABLE_SNDIO', libsndio_dep.found())
+if not libsndio_dep.found()
+  subdir_done()
+endif
+
+sndio = static_library(
+  'sndio',
+  include_directories: inc,
+  dependencies: [
+    libsndio_dep,
+  ],
+)
+
+libsndio_dep = declare_dependency(
+  link_with: sndio,
+  dependencies: libsndio_dep,
+)
