util/IntrusiveHashSet: new class
Incomplete draft implementation, just enough methods for current
needs.

--- a/test/util/meson.build
+++ b/test/util/meson.build
@@ -6,6 +6,7 @@ test(
     'TestDivideString.cxx',
     'TestException.cxx',
     'TestIntrusiveForwardList.cxx',
+    'TestIntrusiveHashSet.cxx',
     'TestIntrusiveList.cxx',
     'TestMimeType.cxx',
     'TestSplitString.cxx',
