test/meson.build: reduce test_translate_song. dependencies

--- a/test/meson.build
+++ b/test/meson.build
@@ -288,7 +288,8 @@ if enable_database
       dependencies: [
         log_dep,
         tag_dep,
-        storage_glue_dep,
+        fs_dep,
+        storage_plugins_dep,
         gtest_dep,
       ],
     ),
