storage/meson.build: move StorageState.cxx to "mpd" executable
Fixes spurious linker errors.

--- a/meson.build
+++ b/meson.build
@@ -390,6 +390,7 @@ endif
 
 if enable_database
   sources += [
+    'src/storage/StorageState.cxx',
     'src/queue/PlaylistUpdate.cxx',
     'src/command/StorageCommands.cxx',
     'src/command/DatabaseCommands.cxx',
