lib/icu/CaseFold: move low-level wrapper to FoldCase.cxx

--- a/src/lib/icu/meson.build
+++ b/src/lib/icu/meson.build
@@ -15,8 +15,9 @@ endif
 iconv_dep = []
 if icu_dep.found()
   icu_sources += [
-    'Util.cxx',
     'Init.cxx',
+    'Util.cxx',
+    'FoldCase.cxx',
   ]
 else
   if meson.version().version_compare('>= 0.60')
