test/TestStringFilter: new unit test

--- a/test/meson.build
+++ b/test/meson.build
@@ -199,6 +199,7 @@ test(
   'TestSongFilter',
   executable(
     'TestSongFilter',
+    'TestStringFilter.cxx',
     'TestTagSongFilter.cxx',
     include_directories: inc,
     dependencies: [
