mixer/meson.build: split libmixer_api from libmixer_glue

--- a/test/meson.build
+++ b/test/meson.build
@@ -622,7 +622,7 @@ if alsa_dep.found()
     'read_mixer.cxx',
     include_directories: inc,
     dependencies: [
-      mixer_glue_dep,
+      mixer_plugins_dep,
     ],
   )
 endif
