--- a/src/fs/glue/meson.build
+++ b/src/fs/glue/meson.build
@@ -5,6 +5,7 @@ fs_glue = static_library(
   include_directories: inc,
   dependencies: [
     fs_dep,
+    fs_io_dep,
     fmt_dep,
     log_dep,
     util_dep,
