output/meson.build: add liboutput_registry.a

--- a/src/output/meson.build
+++ b/src/output/meson.build
@@ -18,11 +18,26 @@ output_api_dep = declare_dependency(
 
 subdir('plugins')
 
+output_registry = static_library(
+  'output_registry',
+  'Registry.cxx',
+  include_directories: inc,
+  dependencies: [
+    fmt_dep,
+  ],
+)
+
+output_registry_dep = declare_dependency(
+  link_with: output_registry,
+  dependencies: [
+    output_plugins_dep,
+  ],
+)
+
 output_glue = static_library(
   'output_glue',
   'Defaults.cxx',
   'Filtered.cxx',
-  'Registry.cxx',
   'MultipleOutputs.cxx',
   'SharedPipeConsumer.cxx',
   'Source.cxx',
@@ -37,6 +52,7 @@ output_glue = static_library(
   include_directories: inc,
   dependencies: [
     fmt_dep,
+    output_registry_dep,
   ],
 )
 
@@ -45,9 +61,7 @@ output_glue_dep = declare_dependency(
   dependencies: [
     filter_glue_dep,
     mixer_plugins_dep,
-    output_plugins_dep,
   ],
 )
-
 
 configure_file(output: 'Features.h', configuration: output_features)
