io/meson.build: move sources to libio_fs.a
Only that one has a dependency on libfs.a (for class AllocatedPath
etc.).

--- a/src/fs/io/meson.build
+++ b/src/fs/io/meson.build
@@ -4,7 +4,7 @@ fs_io = static_library(
   include_directories: inc,
   dependencies: [
     fs_dep,
-    io_dep,
+    io_fs_dep,
     system_dep,
     zlib_dep,
   ],
