decoder/sidplay: require libsidplayfp (drop support for the original sidplay)
The original sidplay project has been mostly unmaintained for nearly
12 years, and the most recent release was in 2016, while the
libsidplayfp project has been actively maintained all the time.

--- a/src/decoder/plugins/meson.build
+++ b/src/decoder/plugins/meson.build
@@ -156,27 +156,7 @@ if wildmidi_dep.found()
   decoder_plugins_sources += 'WildmidiDecoderPlugin.cxx'
 endif
 
-if not get_option('sidplay').disabled()
-  libsidplayfp_dep = dependency('libsidplayfp', version: '>= 1.8', required: false)
-  decoder_features.set('HAVE_SIDPLAYFP', libsidplayfp_dep.found())
-
-  if libsidplayfp_dep.found()
-    libsidplay_dep = libsidplayfp_dep
-  else
-    libsidplay2_dep = dependency('libsidplay2', required: false)
-    if libsidplay2_dep.found()
-      libsidutils_dep = dependency('libsidutils')
-      libresid_builder_dep = compiler.find_library('resid-builder')
-      libsidplay_dep = declare_dependency(dependencies: [libsidplay2_dep, libsidutils_dep, libresid_builder_dep])
-    elif get_option('sidplay').enabled()
-      error('Neither libsidplayfp nor libsidplay2 found')
-    else
-      libsidplay_dep = libsidplay2_dep
-    endif
-  endif
-else
-  libsidplay_dep = dependency('', required: false)
-endif
+libsidplay_dep = dependency('libsidplayfp', version: '>= 1.8', required: get_option('sidplay'))
 decoder_features.set('ENABLE_SIDPLAY', libsidplay_dep.found())
 if libsidplay_dep.found()
   decoder_plugins_sources += 'SidplayDecoderPlugin.cxx'
