--- a/meson.build
+++ b/meson.build
@@ -12,6 +12,7 @@ project(
 
     # If we build those libraries as Meson subproject, they shall be
     # linked statically into the MPD executable.
+    'curl:default_library=static',
     'expat:default_library=static',
     'fmt:default_library=static',
     'gtest:default_library=static',
@@ -22,6 +23,8 @@ project(
     'vorbis:default_library=static',
 
     # Not interested in compiler warnings from subprojects.
+    'curl:werror=false',
+    'curl:warning_level=0',
     'expat:werror=false',
     'expat:warning_level=0',
     'fmt:warning_level=0',
@@ -31,6 +34,38 @@ project(
     'liburing:warning_level=0',
     'sqlite3:warning_level=0',
     'vorbis:warning_level=0',
+
+    # Disable subprojects features we don't need
+    'curl:tool=disabled',
+    'curl:tests=disabled',
+    'curl:unittests=disabled',
+    'curl:brotli=disabled',
+    'curl:cookies=disabled',
+    'curl:progress-meter=disabled',
+    'curl:zstd=disabled',
+    'curl:kerberos-auth=disabled',
+    'curl:negotiate-auth=disabled',
+    'curl:gss-api=disabled',
+    'curl:ntlm=disabled',
+    'curl:ssh=disabled',
+    'curl:dict=disabled',
+    'curl:file=disabled',
+    'curl:ftp=disabled',
+    'curl:gopher=disabled',
+    'curl:imap=disabled',
+    'curl:ldap=disabled',
+    'curl:ldaps=disabled',
+    'curl:mqtt=disabled',
+    'curl:pop3=disabled',
+    'curl:rtmp=disabled',
+    'curl:rtsp=disabled',
+    'curl:smb=disabled',
+    'curl:smtp=disabled',
+    'curl:telnet=disabled',
+    'curl:tftp=disabled',
+    'opus:docs=disabled',
+    'opus:extra-programs=disabled',
+    'opus:tests=disabled',
   ],
   license: 'GPLv2+',
 )
