subprojects: add ogg, flac, opus

--- a/meson.build
+++ b/meson.build
@@ -13,20 +13,34 @@ project(
     # If we build those libraries as Meson subproject, they shall be
     # linked statically into the MPD executable.
     'expat:default_library=static',
+    'flac:default_library=static',
     'fmt:default_library=static',
     'gtest:default_library=static',
     'liburing:default_library=static',
+    'ogg:default_library=static',
+    'opus:default_library=static',
     'sqlite3:default_library=static',
     'vorbis:default_library=static',
 
     # Not interested in compiler warnings from subprojects.
     'expat:werror=false',
     'expat:warning_level=0',
+    'flac:werror=false',
+    'flac:warning_level=0',
     'fmt:warning_level=0',
     'gtest:warning_level=0',
     'liburing:warning_level=0',
     'sqlite3:warning_level=0',
+    'oggiopus:werror=false',
+    'ogg:warning_level=0',
+    'opus:werror=false',
+    'opus:warning_level=0',
     'vorbis:warning_level=0',
+
+    # Disable subprojects features we don't need
+    'opus:docs=disabled',
+    'opus:extra-programs=disabled',
+    'opus:tests=disabled',
   ],
   license: 'GPLv2+',
 )
