subprojects: add ogg, flac, opus

--- a/subprojects/.gitignore
+++ b/subprojects/.gitignore
@@ -2,10 +2,13 @@
 
 /curl-*/
 /expat-*/
+/flac-*/
 /fmt-*/
 /googletest-*/
 /libmicrohttpd*
 /libnpupnp-*/
+/libogg-*/
 /liburing-*/
 /libvorbis-*/
+/opus-*/
 /sqlite-*/
