subprojects: add openssl

--- a/meson.build
+++ b/meson.build
@@ -21,6 +21,7 @@ project(
     'libnpupnp:default_library=static',
     'liburing:default_library=static',
     'ogg:default_library=static',
+    'openssl:default_library=static',
     'opus:default_library=static',
     'sqlite3:default_library=static',
     'vorbis:default_library=static',
@@ -40,6 +41,8 @@ project(
     'sqlite3:warning_level=0',
     'oggiopus:werror=false',
     'ogg:warning_level=0',
+    'openssl:werror=false',
+    'openssl:warning_level=0',
     'opus:werror=false',
     'opus:warning_level=0',
     'vorbis:warning_level=0',
@@ -72,6 +75,8 @@ project(
     'curl:smtp=disabled',
     'curl:telnet=disabled',
     'curl:tftp=disabled',
+    'openssl:build_cli=false',
+    'openssl:asm=disabled',
     'opus:docs=disabled',
     'opus:extra-programs=disabled',
     'opus:tests=disabled',
