--- a/meson.build
+++ b/meson.build
@@ -19,6 +19,7 @@ project(
     'gtest:default_library=static',
     'liburing:default_library=static',
     'ogg:default_library=static',
+    'openssl:default_library=static',
     'opus:default_library=static',
     'sqlite3:default_library=static',
     'vorbis:default_library=static',
@@ -36,6 +37,8 @@ project(
     'sqlite3:warning_level=0',
     'oggiopus:werror=false',
     'ogg:warning_level=0',
+    'openssl:werror=false',
+    'openssl:warning_level=0',
     'opus:werror=false',
     'opus:warning_level=0',
     'vorbis:warning_level=0',
@@ -68,6 +71,7 @@ project(
     'curl:smtp=disabled',
     'curl:telnet=disabled',
     'curl:tftp=disabled',
+    'openssl:build_cli=false',
     'opus:docs=disabled',
     'opus:extra-programs=disabled',
     'opus:tests=disabled',
